--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ tr:nth-child(even) {
     text-align: center;
 }
 
+#doctor,
+#person-creds,
 #add-item,
 #update-item,
 #remove-item {
@@ -87,7 +89,7 @@ tr:nth-child(even) {
     position: fixed;
     left: 0;
     right: 0;
-    top: 50%;
+    top: 40%;
     margin-left: auto;
     margin-right: auto;
     width: 35%;
@@ -102,6 +104,7 @@ table.person{
     height: 35%;
     width: 50% !important;
     margin-left: 6%;
+    border: 1;
 }
 
 tr th:nth-child( 1 ){
@@ -152,6 +155,7 @@ tr th:nth-child( 1 ){
 
 .personTime{
     width: 15%;
+    margin-top: 2%;
 }
 
 .summonth,
@@ -163,4 +167,39 @@ tr th:nth-child( 1 ){
 
 .summonth{
     bottom: 5%;
+}
+
+.cross{
+    margin-left: 85%;
+}
+
+.big{
+    margin-left: 84%;
+}
+
+.corr{
+    margin-left: 81%;
+}
+
+.correction{
+    margin-left: 51%;
+    margin-top: 1%;
+}
+
+.doch2,
+.doch{
+    margin-left: 6%;
+    position: absolute;
+    margin-top: -1%;
+}
+
+.doch2{
+    margin-left: 15%;
+}
+
+.timeleave,
+.dateleave{
+    margin-top: -10%;
+    position: absolute;
+    margin-left: 70%;
 }
